--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Product/Service</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>TechGear Haven - Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Moin Ibna Mahmud and ID(2010668) -->
+    <!-- Author: Moin Ibna Mahmud, ID: 2010668 -->
     <header>
+        <div class="logo">
+            <h1>TechGear Haven</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,18 +21,24 @@
             </ul>
         </nav>
     </header>
-    <main class="home-flex">
+
+    <main class="flex-container">
         <section>
-            <h1>Welcome to Our Product/Service</h1>
-            <p>Discover the best products for your needs.</p>
+            <h2>Welcome to TechGear Haven</h2>
+            <p>Discover the latest in tech gadgets and accessories. From the newest smartphones to cutting-edge wearables, we've got everything you need to stay ahead of the tech curve.</p>
+            <p>Explore our wide range of products and find the perfect gadget to fit your lifestyle. Our curated selection ensures that you get the best quality at the best prices.</p>
+            <img src="home-image1.jpg" alt="Latest Tech Gadgets">
         </section>
         <section>
-            <img src="images/product1.jpg" alt="Product 1">
-            <img src="images/product2.jpg" alt="Product 2">
+            <h2>Why Choose Us?</h2>
+            <p>At TechGear Haven, we are passionate about technology and dedicated to bringing you the best and latest gadgets. Our team of experts handpicks each product to ensure quality and performance.</p>
+            <p>With excellent customer service and a hassle-free shopping experience, we aim to be your go-to destination for all things tech.</p>
+            <img src="home-image2.jpg" alt="Quality Service">
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2024 Product/Service</p>
+        <p>&copy; 2024 TechGear Haven. All rights reserved.</p>
     </footer>
 </body>
 </html>
