--- a/products.html
+++ b/products.html
@@ -14,7 +14,12 @@
             <h1>TechGear Haven</h1>
         </div>
         <nav>
-            <ul>
+            <div class="menu-icon" id="menu-icon">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <ul id="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -28,8 +33,27 @@
             <p>Explore our extensive range of tech gadgets, including smartphones, tablets, laptops, and accessories. Each product is carefully selected to meet the highest standards of quality and performance.</p>
             <div class="grid">
                 <div class="product-item">
-                    <img src="product1.jpg" alt="Smartphone">
-                    <h3>Latest Smartphone</h3>
-                    <p>Cutting-edge technology and sleek design.</p>
+                    <img src="product3.jpg" alt="Smartphone">
+                    <h3>Samsung Galaxy A52s 5G Smartphone </h3>
+                    <p>Price: 49,888৳</p>
                 </div>
-                
+                <div class="product-item">
+                    <img src="product2.jpg" alt="Tablet">
+                    <h3>Lenovo Tab M10 (3rd Gen) 10.1-Inch  Tablet </h3>
+                    <p>Price: 24,999৳</p>
+                </div>
+                <div class="product-item">
+                    <img src="product1.webp" alt="Laptop">
+                    <h3>Lenovo Yoga 7 2-in-1 14" Touch Laptop</h3>
+                    <p>Price: 115,000৳</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 TechGear Haven. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
