--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
     <main class="flex-container">
         <section>
             <h2>Welcome to TechGear Haven</h2>
-            <p>Discover the latest in tech gadgets and accessories. From the newest smartphones to cutting-edge wearables, we've got everything you need to stay ahead of the tech curve.</p>
-            <p>Explore our wide range of products and find the perfect gadget to fit your lifestyle. Our curated selection ensures that you get the best quality at the best prices.</p>
-            <img src="home-image1.jpg" alt="Latest Tech Gadgets">
+            <p>Welcome to TechGear Heaven, your ultimate destination for cutting-edge tech gadgets. Established in 2024 in Dhaka by Moin Ibna Mahmud, we are dedicated to providing top-quality technology products and accessories. Explore our curated selection and discover the latest innovations designed to elevate your tech experience. For any questions or feedback, feel free to contact us.</p>
+            <p>
+                Best regards,
+                Moin Ibna Mahmud</p>
+            <img src="home-image1.png" alt="Latest Tech Gadgets">
         </section>
         <section>
             <h2>Why Choose Us?</h2>
             <p>At TechGear Haven, we are passionate about technology and dedicated to bringing you the best and latest gadgets. Our team of experts handpicks each product to ensure quality and performance.</p>
             <p>With excellent customer service and a hassle-free shopping experience, we aim to be your go-to destination for all things tech.</p>
-            <img src="home-image2.jpg" alt="Quality Service">
+            <img src="home-image2.png" alt="Quality Service">
         </section>
     </main>
 
