--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="flex-container">
         <section>
             <h2>Welcome to TechGear Haven</h2>
-            <p>Welcome to TechGear Heaven, your ultimate destination for cutting-edge tech gadgets. Established in 2024 in Dhaka by Moin Ibna Mahmud, we are dedicated to providing top-quality technology products and accessories. Explore our curated selection and discover the latest innovations designed to elevate your tech experience. For any questions or feedback, feel free to contact us.</p>
+            <p>Welcome to TechGear Haven, your ultimate destination for cutting-edge tech gadgets. Established in 2024 in Dhaka by Moin Ibna Mahmud, we are dedicated to providing top-quality technology products and accessories. Explore our curated selection and discover the latest innovations designed to elevate your tech experience. For any questions or feedback, feel free to contact us.</p>
             <p>
                 Best regards,
                 Moin Ibna Mahmud</p>
