--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,34 @@
             <p>Email: support@techgearhaven.com</p>
             <p>Phone: +88 01795186787</p>
             <p>Address: Bashundhara R/A, Dhaka-1229</p>
+            <img src="contact2.jpg" alt="Contact" style="display: block; margin: 0 auto;">
+
+        <section id="contact-table">
+            <h2>Contact Us Table</h2>
+            <form action="#" method="POST"> <!-- Replace "#" with your form action -->
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Message</th>
+                            <th></th> <!-- Empty header for submit button -->
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><input type="text" placeholder="Your Name" required></td>
+                            <td><input type="email" placeholder="Your Email" required></td>
+                            <td><textarea placeholder="Your Message" required></textarea></td>
+                            <td><button type="submit">Submit</button></td> <!-- Submit button -->
+                        </tr>
+                    </tbody>
+                </table>
+            </form>
+            <div style="margin-top: 20px;"> <!-- Adjust margin-top as needed -->
+                <img src="contact1.jpg" alt="Contact" style="display: block; margin: 0 auto;">
+            </div>
+        
         </section>
     </main>
 
